--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "material-ui": "^0.16.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "version": "1.0.0",
   "main": "index.js",
