--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "install": "^0.8.2",
     "material-ui": "^0.16.0",
     "meteor-node-stubs": "~0.2.0",
