--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "install": "^0.8.2",
-    "material-ui": "^0.16.0",
+    "material-ui": "^0.16.2",
     "meteor-node-stubs": "~0.2.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
     "react-komposer": "^1.13.1",
     "react-mounter": "^1.2.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "git+https://github.com/zilverline/react-tap-event-plugin.git#master",
     "replit-client": "^0.6.2"
   },
   "version": "1.0.0",
